--- a/src/index.css
+++ b/src/index.css
@@ -113,7 +113,19 @@
     }
 
     #poemImg {
-        width: 100%
+        height: 200px;
+    }
+
+    #pantsImg {
+        height: 150px;
+    }
+
+    .packangingImg {
+        height: 500px;
+    }
+
+    #poemSwiper {
+        width: 263px;
     }
 
     .mainButton {
@@ -138,8 +150,8 @@
     }
 
     .swiper-container {
-        width: 70%;
-        height: 70%;
+        width: 100%;
+        height: 100%;
     }
 
     .swiper-slide {
@@ -322,6 +334,11 @@
     .headerDiv {
         display: flex;
         justify-content: center;
+    }
+
+    .packangingImg {
+        width: 840px;
+        height: 433px
     }
 
     .mainButton {
