--- a/src/index.css
+++ b/src/index.css
@@ -336,7 +336,7 @@
         justify-content: center;
     }
 
-    .packangingImg {
+    .packangingImage {
         width: 840px;
         height: 433px
     }
