--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,10 @@
 
     }
 
+    #weekliesDiv{
+        height: 35%;
+    }
+
     html, #root {
         width: 100%;
         height: 100%;
@@ -219,6 +223,10 @@
         cursor: pointer;
         height: 919px;
         margin-top: 300px
+    }
+
+    #weekliesDiv{
+        height: 70%;
     }
 
     #poemImg {
