--- a/src/index.css
+++ b/src/index.css
@@ -214,7 +214,7 @@
     }
 
     .swiperPosterImg {
-        width: 840px;
+        /*width: 840px;*/
         height: 433px;
     }
 
@@ -226,12 +226,12 @@
     }
 
     #weekliesDiv{
-        height: 70%;
+        /*height: 100%;*/
     }
 
     #poemImg {
-        width: 840px;
-        height: 433px;
+        /*width: 840px;*/
+        height: 100%;
     }
 
     .photoImg {
@@ -305,6 +305,10 @@
         margin-top: 200px
     }
 
+    .packangingImage {
+        height: 600px
+    }
+
     .headerButtons {
         display: flex;
         flex-direction: row;
@@ -344,9 +348,8 @@
         justify-content: center;
     }
 
-    .packangingImg {
-        width: 840px;
-        height: 433px
+    #pantsImg {
+        height: 500px;
     }
 
     .mainButton {
@@ -356,6 +359,10 @@
         width: 418px;
         height: 123px;
         border-color: black;
+    }
+
+    #packangingSwipe{
+        height: 100%;
     }
 
     .buttonText {
@@ -388,8 +395,8 @@
 
     .swiper-slide img {
         display: block;
-        width: 100%;
-        height: 100%;
+        /*width: 100%;*/
+        /*height: 100%;*/
         object-fit: cover;
     }
 }
